Add configurations to devise Sessions controller

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,60 +1,1 @@
-<p id="notice"><%= notice %></p>
-<div class="activities-container">
-  <div class="navigation">
-    <div class="buttons">
-      <button class="activities-first-label">New Activity Record</button>
-      <button class="activities-second-label">Activities</button>
-    </div>
-  </div>
-
-  <div class="pagination">
-    <div class="columns is-centered activities-first-div">
-      <div class="column is-6 mx-auto">
-        <div class="card outerdiv">
-          <header class="">
-            <h1 class="has-text-centered"><strong> New Activity</strong></h1>
-          </header>
-          <div class="card-content">
-            <div class="content">
-              <%= render 'form', activity: @activity %>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="box outerdiv activities-second-div">
-      <h1 class="has-text-centered"><strong>Activities</strong></h1>
-
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Company name</th>
-            <th>Date</th>
-            <th>Season</th>
-            <th>Farm name</th>
-            <th>Section</th>
-            <th>Activity</th>
-            <th></th>
-          </tr>
-        </thead>
-
-        <tbody>
-          <% @activities.each do |activity| %>
-            <tr>
-              <td><%= activity.company_name %></td>
-              <td><%= activity.date %></td>
-              <td><%= activity.season %></td>
-              <td><%= activity.farm_name %></td>
-              <td><%= activity.section %></td>
-              <td><%= activity.activity %></td>
-              <td><%= link_to 'Show', activity, class:"navbar-item" %></td>
-              <td><%= link_to 'Edit', edit_activity_path(activity), class:"navbar-item" %></td>
-              <td><%= link_to 'Destroy', activity, method: :delete, data: { confirm: 'Are you sure?' }, class:"navbar-item" %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
-  </div>
-</div>
+<%= javascript_pack_tag 'hello_react' %>
