--- a/app/javascript/packs/homePage.module.scss
+++ b/app/javascript/packs/homePage.module.scss
@@ -1,22 +1,22 @@
-// * {
-//   box-sizing: border-box;
-//   margin: 0;
-//   padding: 0;
-//   font-family: "Times New Roman", Times, serif;
-// }
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Times New Roman", Times, serif;
+}
 
-// body {
-//   max-width: 100vw;
-//   height: fit-content;
-//   margin: 0;
-//   padding: 0;
-//   background-color: rgb(117, 2, 88);
+body {
+  max-width: 100vw;
+  height: fit-content;
+  margin: 0;
+  padding: 0;
+  background-color: rgb(117, 2, 88);
+  color: white;
+  .container {
+    width: 100%;
 
-//   .container {
-//     width: 100%;
-
-//     .main {
-//       width: 100%;
-//     }
-//   }
-// }
+    .main {
+      width: 100%;
+    }
+  }
+}
