Add redux store and configs

--- a/app/javascript/packs/Pages/UserAuth/Login.module.scss
+++ b/app/javascript/packs/Pages/UserAuth/Login.module.scss
@@ -63,6 +63,7 @@
           width: fit-content;
           height: fit-content;
           margin: auto;
+          cursor: pointer;
         }
     
         input {
