--- a/app/javascript/packs/Pages/UserAuth/Login.module.css
+++ b/app/javascript/packs/Pages/UserAuth/Login.module.css
@@ -91,6 +91,7 @@
   height: -moz-fit-content;
   height: fit-content;
   margin: auto;
+  cursor: pointer;
 }
 
 .container .formContainer form .control input {
