--- a/app/javascript/packs/Pages/UserAuth/Login.module.scss
+++ b/app/javascript/packs/Pages/UserAuth/Login.module.scss
@@ -5,8 +5,8 @@
   background-color: rgb(158, 152, 152);
   color: black;
   border-radius: 1.5rem;
-  border: 0.6rem solid red;
   height: fit-content;
+  box-shadow: 7px 7px 7px 7px rgba(160, 158, 158, 0.7);
 
   .formContainer {
     display: flex;
