--- a/app/javascript/packs/Pages/UserAuth/Login.module.css
+++ b/app/javascript/packs/Pages/UserAuth/Login.module.css
@@ -136,6 +136,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  cursor: pointer;
 }
 
 .container .aside {
