--- a/app/javascript/packs/Pages/UserAuth/Logout.module.css
+++ b/app/javascript/packs/Pages/UserAuth/Logout.module.css
@@ -6,5 +6,7 @@
   letter-spacing: 1px;
   font-weight: 900;
   padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
 }
 /*# sourceMappingURL=Logout.module.css.map */
