--- a/app/javascript/packs/Pages/UserAuth/Registration.module.scss
+++ b/app/javascript/packs/Pages/UserAuth/Registration.module.scss
@@ -1,5 +1,5 @@
 .container {
-  width: 45%;
+  width: 60%;
   margin: 3rem auto;
   display: flex;
   background-color: rgb(158, 152, 152);
@@ -49,41 +49,36 @@
       display: flex;
       flex-direction: column;
       margin-top: 2rem;
-    
+
       .control {
         width: 100%;
         height: 2.5rem;
         display: flex;
         background-color: white;
         color: black;
-        margin-bottom: 2rem;
+        margin-bottom: 0.5rem;
         border-radius: 0.4rem;
-    
-        span {
-          width: fit-content;
-          height: fit-content;
-          margin: auto;
-          cursor: pointer;
-        }
-    
+
         input {
           &:focus {
             background-color: white;
             outline: white;
             border: 1px solid white;
           }
-          width: auto;
+
+          width: 100%;
           height: 2.5rem;
           font-size: 1.3rem;
           padding: 0;
           border: 1px solid white;
           background-color: white;
+          border-radius: inherit;
         }
       }
-    
+
       .actions {
         width: 100%;
-    
+
         button {
           margin: auto;
           padding: 0.4rem 1.2rem;
