--- a/app/javascript/packs/Screens/AdminScreen/dashboard/navigation/Navigation.module.scss
+++ b/app/javascript/packs/Screens/AdminScreen/dashboard/navigation/Navigation.module.scss
@@ -12,6 +12,26 @@
     font-size: large;
     font-weight: 900;
     text-shadow: 1px 1px gray;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    .start {
+      width: 40%;
+    }
+
+    .Wend {
+      width: 58%;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      a {
+        cursor: pointer;
+        text-decoration: none;
+        color: white;
+        text-shadow: inherit;
+      }
+    }
   }
 
   .end {
