--- a/app/javascript/packs/Pages/Components/DeductionTables/DeductionTable.module.scss
+++ b/app/javascript/packs/Pages/Components/DeductionTables/DeductionTable.module.scss
@@ -12,6 +12,7 @@
     justify-content: space-between;
     border-radius: 0.8rem;
     border: #7a3f07 solid;
+    padding: 0.8rem;
 
     a {
       text-decoration: none;
