--- a/app/javascript/packs/Pages/Components/DeductionTables/DeductionTable.module.css
+++ b/app/javascript/packs/Pages/Components/DeductionTables/DeductionTable.module.css
@@ -22,6 +22,7 @@
           justify-content: space-between;
   border-radius: 0.8rem;
   border: #7a3f07 solid;
+  padding: 0.8rem;
 }
 
 .container .navigation a {
