--- a/app/javascript/packs/homePage.module.css
+++ b/app/javascript/packs/homePage.module.css
@@ -13,7 +13,7 @@ body {
   height: fit-content;
   margin: 0;
   padding: 0;
-  background-color: #750258;
+  background-color: #afadad;
   color: white;
 }
 
