--- a/app/javascript/packs/Screens/AdminScreen/dashboard/Dashbord.module.scss
+++ b/app/javascript/packs/Screens/AdminScreen/dashboard/Dashbord.module.scss
@@ -1,11 +1,205 @@
 .dashboard {
   width:  100%;
+  background-color: rgb(175, 173, 173);
+  height: 100vh;
 
   .navigation {
     width: 100%;
   }
 
   .main {
-    width: 100%;
+    width: 95%;
+    margin: auto;
+    display: flex;
+    height: 80vh;
+
+    .start {
+      flex: 35%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      
+      h1, h3 {
+        color: black !important;
+      }
+    }
+
+    .end {
+      flex: 65%;
+
+      .card {
+        margin-top: 5%;
+        width: 100%;
+        height: 93%;
+        background-color: whitesmoke;
+        border-radius: 1.3rem;
+        display: flex;
+        padding: 0.3rem;
+        box-shadow: 5px 5px 5px 5px gray;
+
+        &:hover {
+          width: 101%;
+        }
+
+        .sidebar {
+          flex: 20%;
+          background-color: rgb(9, 7, 32);
+          border-top-left-radius: 0.9rem;
+          border-bottom-left-radius: 0.9rem;
+
+          section {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            height: 100%;
+
+            margin-left: 0.7rem;
+
+            a {
+              margin-top: 0.7rem;
+              font-size: 1.5rem;
+              text-decoration: none;
+              color: white;
+              text-shadow: 1px 1px gray;
+            }
+          }
+        }
+
+        .cardmain {
+          flex: 80%;
+
+          display: flex;
+          flex-direction: column;
+
+          .topbar {
+            flex: 6%;
+            width: 100%;
+            display: flex;
+            margin: 1rem 2.2rem 0 0.2rem;
+
+            h3 {
+              flex: 90%;
+              color: #000;
+            }
+
+            p {
+              flex: 10%;
+
+              span {
+                width: fit-content;
+                font-size: 1.4rem;
+                font-weight: 900;
+                margin: auto;
+                border-radius: 50%;
+                padding: 0.7rem;
+                background-color: rgb(9, 7, 32);
+                color: white;
+              }
+            }
+          }
+
+          .mainsection {
+            flex: 100%;
+            display: flex;
+            width: 100%;
+
+            .right {
+              flex: 20%;
+              display: flex;
+              flex-direction: column;
+              justify-content: space-between;
+
+              .fartop {
+                flex: 30.3%;
+                background-color: rgb(9, 7, 32);
+                border-radius: 1rem;
+                margin: 0.2rem;
+              }
+
+              .farcenter {
+                flex: 30.3%;
+                background-color: rgb(9, 7, 32);
+                border-radius: 1rem;
+                margin: 0.2rem;
+              }
+
+              .farbottom {
+                flex: 30.3%;
+                background-color: rgb(9, 7, 32);
+                border-radius: 1rem;
+                margin: 0.2rem;
+              }
+            }
+
+            .left {
+              flex: 80%;
+              display: flex;
+              flex-direction: column;
+
+              .top {
+                flex: 20%;
+                display: flex;
+
+                div {
+                  flex: 30.3%;
+                  margin: 0.3rem;
+                  background-color: #fcf6f5ff;
+                  border: 1px solid rgb(189, 186, 186);
+                  border-radius: 0.6rem;
+                  box-shadow: 3px 3px 3px 3px rgb(189, 186, 186);
+                }
+              }
+
+              .center {
+                flex: 50%;
+                display: flex;
+
+                .start {
+                  flex: 70%;
+                  margin: 0.3rem;
+                  background-color: #fcf6f5ff;
+                  border: 1px solid rgb(189, 186, 186);
+                  border-radius: 0.6rem;
+                  box-shadow: 3px 3px 3px 3px rgb(189, 186, 186);
+                }
+
+                .end {
+                  flex: 30%;
+                  margin: 0.3rem;
+                  background-color: #fcf6f5ff;
+                  border: 1px solid rgb(189, 186, 186);
+                  border-radius: 0.6rem;
+                  box-shadow: 3px 3px 3px 3px rgb(189, 186, 186);
+                }
+              }
+
+              .bottom {
+                flex: 30%;
+
+                display: flex;
+                .left {
+                  flex: 50%;
+                  margin: 0.3rem;
+                  background-color: #fcf6f5ff;
+                  border: 1px solid rgb(189, 186, 186);
+                  border-radius: 0.6rem;
+                  box-shadow: 3px 3px 3px 3px rgb(189, 186, 186);
+                }
+
+                .right {
+                  flex: 50%;
+                  margin: 0.3rem;
+                  background-color: #fcf6f5ff;
+                  border: 1px solid rgb(189, 186, 186);
+                  border-radius: 0.6rem;
+                  box-shadow: 3px 3px 3px 3px rgb(189, 186, 186);
+                }
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
