--- a/app/javascript/packs/Screens/AdminScreen/dashboard/navigation/Navigation.module.scss
+++ b/app/javascript/packs/Screens/AdminScreen/dashboard/navigation/Navigation.module.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: black;
+  background-color: rgb(9, 7, 32);
   height: fit-content;
   width: 100%;
   display:  flex;
@@ -17,11 +17,19 @@
     justify-content: space-between;
 
     .start {
-      width: 25%;
+      width: 50%;
+
+      span {
+        color: black;
+        background-color: whitesmoke;
+        margin: 0.1rem;
+        padding: 0.5rem;
+        border-radius: 50%;
+      }
     }
 
     .Wend {
-      width: 75%;
+      width: 50%;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
