--- a/app/javascript/packs/Pages/Components/Loading/Loading.module.css
+++ b/app/javascript/packs/Pages/Components/Loading/Loading.module.css
@@ -1,20 +1,66 @@
-.loading {
-  width: 100%;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
 }
 
-.loading .loadingspinner {
-  background-color: white;
-  font-size: 2.3rem;
-  width: 50%;
-  padding: 2rem;
-  color: black;
-  -webkit-box-shadow: 7px 7px 7px 7px gray;
-          box-shadow: 7px 7px 7px 7px gray;
-  font-weight: 900;
-  letter-spacing: 1px;
-  text-align: center;
-  margin: auto;
-  text-shadow: 1px 1px gray;
-  border-radius: 0.5rem;
+.loading {
+  background-color: black;
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+
+.loading div {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid #fff;
+  border-radius: 50%;
+  -webkit-animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+          animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #fff transparent transparent transparent;
+}
+
+.loading div:nth-child(1) {
+  -webkit-animation-delay: -0.45s;
+          animation-delay: -0.45s;
+}
+
+.loading div:nth-child(2) {
+  -webkit-animation-delay: -0.3s;
+          animation-delay: -0.3s;
+}
+
+.loading div:nth-child(3) {
+  -webkit-animation-delay: -0.15s;
+          animation-delay: -0.15s;
+}
+
+@-webkit-keyframes lds-ring {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes lds-ring {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 }
 /*# sourceMappingURL=Loading.module.css.map */
