--- a/app/javascript/packs/Pages/Components/Loading/Loading.module.scss
+++ b/app/javascript/packs/Pages/Components/Loading/Loading.module.scss
@@ -1,17 +1,42 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
 .loading {
-  width: 100%;
-  .loadingspinner{
-    background-color: white;
-    font-size: 2.3rem;
-    width: 50%;
-    padding: 2rem;
-    color: black;
-    box-shadow: 7px 7px 7px 7px gray;
-    font-weight: 900;
-    letter-spacing: 1px;
-    text-align: center;
-    margin: auto;
-    text-shadow: 1px 1px gray;
-    border-radius: 0.5rem;
+  background-color: black;
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.loading div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid #fff;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #fff transparent transparent transparent;
+}
+.loading div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.loading div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.loading div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
